--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,11 @@ body {
     background-color: #0D0D0D;
     color: #fff;
 }
+.header .container {
+    display: flex;
+    flex-direction: row;
+}
+.header-links {
+    display: flex;
+    flex-direction: row;
+}
