--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,12 @@ body {
     background-color: #0D0D0D;
     color: #fff;
 }
+.header .container {
+    display: flex;
+    justify-content: space-between;
+}
+ul {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+}
