--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ body {
     background-color: #0D0D0D;
     color: #fff;
 }
+a {
+    text-decoration: none;
+    color: #fff;
+}
 .header .container {
     display: flex;
     justify-content: space-between;
@@ -16,4 +20,5 @@ ul {
     display: flex;
     flex-direction: row;
     gap: 15px;
+    list-style-type: none;
 }
