--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,16 @@ ul {
     width: 300px;
     height: 300px;
 }
+.info h2 {
+    font-size: 36px;
+    font-weight: 800;
+}
+.info h3 {
+    font-size: 18px;
+}
+.info p {
+    font-size: 18px;
+}
 /* quote section */
 .quote {
     margin-top: 150px;
