--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ a {
     display: flex;
     justify-content: space-between;
     margin: 16px 75px;
+    align-items: baseline;
 }
 ul {
     display: flex;
